@@ -27,6 +27,7 @@ Changes for version 24.1 (unreleased) - Joachim Wiedorn
         * now with use of kernel links as fallback
     - Update example config in lilo.example.conf.
     - Update manpage of liloconfig and lilo-uuid-diskid.
+    - Add hooks for chattr, if vmlinuz files are on xfs filesystems.
 
 
 Changes for version 24.0 (07-June-2013) - Joachim Wiedorn
